@@ -9,6 +9,13 @@ module ActiveMerchant # :nodoc:
         format(credit_card.year, :four_digits) + format(credit_card.month, :two_digits)
       end
 
+      def strftime_yyyymmdd_last_day(credit_card)
+        year = credit_card.year.to_i
+        month = credit_card.month.to_i
+        last_day = Date.civil(year, month, -1).day
+        format(year, :four_digits) + format(month, :two_digits) + format(last_day, :two_digits)
+      end
+
       # This method is used to format numerical information pertaining to credit cards.
       #
       #   format(2005, :two_digits)  # => "05"
