@@ -179,6 +179,7 @@
 * Ebanx: Fix NoMethodError for address [almalee24] #5500
 * Vpos: Check for response under refund.response_code [almalee24] #5501
 * Ebanx: Fix field nesting cof_info, device_id, and notification_url [yunnydang] #5494
+* Cecabank: Fix finRec field formatting for Cecabank Gateway [aaqibrashidmir] #5506
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
